Updated index page.

--- a/index.html
+++ b/index.html
@@ -4,101 +4,200 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Srimon Anida's Hire Me</title>
+  <title>Srimon Anida's Senior Year Profile</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
 </head>
 
- <body>
-   <h1 class="name">Srimon Anida</h1>
-   <marquee direction="right">❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。</marquee>
-   <img class="pic" src="me.jpeg" > 
-   <h3>About Me!</h3>
-   <p class="aboutme">I currently am enrolled in  Thomas A. Edison CTE High School as a senior in Queens, NY. I'm being taught app design and although I enjoy programming I'm also interested in psychology! I love expressing myself through art, but not in the drawing way. I do it through creative writing and digital art which I find creating websites a good use for.</p>
+ <body>  
 
-  
-   <h3>What I'm Into...</h3>
+   
    <ul>
-  <li>I love writing and have been enrolled in creative writing for two years</li>
-  <li>I participated in a wellness and social justice program</li>
-  <li>Currently I'm into podcasts over music</li>
-  <li>I'm reading The Perks of Being a Wallflower</li
+     <li><a class="active" >About Me</a></li>
+     <li><a href="#t">Senior Year</a></li>
+     <li><a href="#t2">Junior Year</a></li>
+     <li><a href="resume1.png">Resume</a></li>
    </ul>
+   </div>
+
+   
+   <header class="name">
+     <h1>Srimon Anida</h1>
+     <marquee direction="right">❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。❀。• *₊°。 ❀°。</marquee>
+   </header>
+
+   <section>
+     <nav>
+       <img class="pic" src="me.jpeg" > 
+     </nav>
+
+     <article>
+       <h1>Welcome to My Portfolio!</h1>
+       <p>Hello! My name is Srimon Anida and I am currently a senior at Thomas A. Edison CTE High School. My CTE track is Web & App Development. For the past three school years, I have been learning and understanding multiple coding languages such as HTML, CSS, JavaScript, and Python. Outside of school, I joined a program called America On Tech. where I was selected to participate in a year-long web development and digital marketing fellowship program. I participated in weekly technology classes taught by software engineers at leading technology companies alongside my regularly scheduled classes in school and even competed in competitions such as the Google Infy App Challenge. What I like most about this field is its challenge. Everything is precise and organized. One misplaced semicolon or color scheme affects every little thing.  </p>
+       <br>
+       <p>Below are my projects over the years. Please keep in mind that my senior year profile is still in progress and that unfortunately due to technical issues, my junior year portfolio is having trouble connecting. I attached projects to substitute.</p>
+     </article>
+   </section>
+   
+  <h1 class="enjoy">Enjoy :)</h1>
+
+<!-- Senior Year -->
+   <h1 class="title">---</h1>
+   <h1 id="t">Senior Year</h1>
+
+   <div class="row">
+     <div class="column">
+       <div class="content">
+         <a href="https://hire-me-profile-srimonanida1.seniorspds-34-fall-2023.repl.co/" target="_blank">
+         <img src="hireme.png" alt="Hire Me Profile" style="width:100%">
+         </a>
+         <h3>Hire Me Project</h3>
+         <p>The hire me project was designed to showcase my best qualities and work experience. Although it was professional, it was  important to highlight and incorporate who I am into it.  Resumes on paper or a Google doc are standard, but as a web design student… creating a website focused on me shows my abilities and progress. </p>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
+         <a href="https://e850dc44-35e5-46c0-8923-1a6d64ee6033-00-ke5qqjdzu83w.worf.replit.dev/" target="_blank">
+         <img src="hs.png" alt="Harry Styles' Pinterest" style="width:100%"> </a>
+         <h3>Harry Styles' Pinterest Project</h3>
+         <p>I chose to remake a social media page on Harry Styles. This project focused on properties of the box model, divs, flexboxes, and multiple class attributes, as well as pair programming techniques. I knew pictures would showcase his life and vibe well which is why I chose to remake Pinterest.</p>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
+         <a href="https://srimonloll.github.io/Minions-Take-on-Shopping/" target="_blank">
+         <img src="minion.png" alt="jQuery Game" style="width:100%"> </a>
+         <h3>Minions Take on Shopping</h3>
+         <p>This interactive game is done with the use of jQuery. You must help the minions shop in New York using different mouse events and hope you guide them to a happy ending. The game focuses on personal choices and each option chosen by the user will unfold a different path. </p>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
+         <a href="https://srimonloll.github.io/062-jQuery-WhackAMole/" target="_blank">
+         <img src="mole.png" alt="Whack-o-Mole Game" style="width:100%"> </a>
+         <h3>Whack-o-Mole Game</h3>
+         <p>This game uses jQuery to hide and show the moles. To make the game interactive and functional, numerous actions and events are created. The functionality of the game is meant to be a simple introduction to the jQuery programming language. </p>
+       </div>
+     </div>
+     <div class="column">
+        <div class="content">
+          <a href="https://7b9c6d19-e15c-4f4d-b651-d5ae56d87dd2-00-fd688wqyaqd7.teams.replit.dev/" target="_blank">
+          <img src="style.png" alt="Character Quiz" style="width:100%"> </a>
+          <h3>Character Quiz</h3>
+          <p>In inspiration from the iconic Buzzfeed quizzes, I designed a quiz deciding which style a person gives off based on certain questions. In this project I focused on using if else statements in Javascript and conditional statements.</p>
+        </div>
+      </div>
+     <div class="column">
+       <div class="content">
+         <a href="https://srimonloll.github.io/Review-Lesson-Chat-Independent-Practice/" target="_blank">
+         <img src="messages.png" alt="jQuery Game" style="width:100%"> </a>
+         <h3>Messages Remake</h3>
+         <p>My assignment for this project was to redesign a messaging app based on an overview of the main ideas from units 6 and 7. Using jQuery actions that accept one or more arguments, such as .text and .css, was my primary goal. Concatenation is a JavaScript method for combining strings and variables. </p>
+       </div>
+     </div>
+
+     <div class="column">
+       <div class="content">
+         <a href="https://srimonloll.github.io/83-Compound-Conditionals-Guided-Practice" target="_blank">
+         <img src="mealtime.png" alt="Meal Time" style="width:100%"> </a>
+         <h3>Meal Time</h3>
+         <p>With the use of conditional statements in Javascript, I have coded a website telling you when to eat based on the time of day and status of hunger.</p>
+       </div>
+     </div>
+
+     <div class="column">
+        <div class="content">
+          <a href="https://srimonloll.github.io/83-Compound-Conditionals-Code-Nation-Social-Club" target="_blank">
+          <img src="cn.png" alt="Log In" style="width:100%"> </a>
+          <h3>Log In</h3>
+          <p>Using compound conditionals, this site shows a log in page coded to only work with a certain username and password.</p>
+        </div>
+      </div>
+
+     <div class="column">
+        <div class="content">
+          <a href="https://srimonloll.github.io/Tourism/" target="_blank">
+          <img src="tourist.png" alt="Tourism" style="width:100%"> </a>
+          <h3>Tours</h3>
+          <p>Using the .empty, .push, and .append methods, as well as a for loop that allows the computer to do the same operation repeatedly, I created a website that shows tourist attractions and allows users to show their favorite places to visit.
+</p>
+        </div>
+      </div>
+
+
+     <div class="column">
+       <div class="content">
+         <a href="https://tangible-trusted-tornado.glitch.me/" target="_blank">
+         <img src="roe.png" alt="Social Awareness Project" style="width:100%"> </a>
+         <h3>Social Awareness</h3>
+         <p>With the use of JS, CSS, and HTML my peers and I programmed a website dedicated to spreading awareness on reproductive rights. As upcoming female adults, we want to advance in our generation instead of regressing due to the recent overturn of Roe v. Wade. We believe in providing women's health care when needed and to protect our rights.
+     </p>
+       </div>
+     </div>
+
+
+
+     <div class="column">
+       <div class="content">
+         <a href="https://glitch.com/edit/#!/third-lizard-parade?path=index.html%3A1%3A0" target="_blank">
+         <img src="edison.png" alt="Edison" style="width:100%"> </a>
+         <h3>TAEHS Page</h3>
+         <p>With the use of HTML & CSS, I was tasked with recreating and incorporating my ideas for my high school's webpage. I focused on the use of images and making my school seem more comfortable for incoming and current students.  </p>
+       </div>
+     </div>
      
-
-   <h3>Favorite Way to Spend Time...</h3>
-   <ul>
-   <li><a href="https://www.netflix.com/">Netflix </a> </li>
-   <li><a href="https://us.brandymelville.com/">Retail Therapy</a> </li>
-   <li><a href="https://www.collegeboard.org/">College Readiness </a> </li>
-   </ul>
- 
-
-   <br>
-   <h1 class="resume"> Resume</h1>
- <table>
-<!--row 1 -->
-     <tr>
-    <th>Education</th>
-    <td><a target="_blank" href="https://www.taehs.org/">Currently a senior at Thomas A. Edison CTE High School</a></td>
-    <td><a target="_blank" href="https://www.americaontech.org/">Web Dev. & Digital Marketing, America On Tech </a></td>
-  </tr>
-<!--row 2 -->
-   <tr>
-    <th>Programs</th>
-    <td><a target="_blank" href="https://queensmuseum.org/exhibition/liberating-our-truth/">QTI For the Arts & Social Justice, Queens Museum </a></td>
-    <td><a target="_blank" class="work" href="https://weareopenmarket.com/">Digital Marketing Intern, Open Market </a></td>
-  </tr>
-<!--row 3-->
-   <tr>
-    <th>Qualities</th>
-    <td>Motivated & Accountable</td>
-    <td>Creative & Integrity</td>
-  </tr>
-<!--row 4 -->
-
-   <tr>
-    <th>Languages</th>
-    <td>English</td>
-    <td>Bengali</td>
-  </tr>
-<!--row 5 -->
-   <tr>
-    <th>Hobbies</th>
-    <td>Creative Writing</td>
-    <td>Jewelry Making</td>
-  </tr>
- </table>
-
-   <p>For my future I currently see myself trying to be involved in many paths to truly figure out what I want to pursue a career in. I like to be involved and have accepted that personally, I need to experience opportunities on my own to figure out what I want and what fuels a drive in me.   </p>
-
-<div class="gallery">
-    <img src="nyit.jpg" alt="NYIT Business Bootcamp Cert" width="600" height="400">
-  </a>
-  <div class="desc"> NYIT Cert </div>
-</div>
-
-<div class="gallery">
-    <img src="grad.jpg" alt="" width="600" height="400">
-  </a>
-  <div class="desc"> Digital Marketing Internship</div>
-</div>
-
-<div class="gallery">
-    <img src="qm.jpg" alt="Queens Museum" width="600" height="400">
-  </a>
-  <div class="desc"> Queens Museum Social Night </div>
-</div>
+   </div>
    
-<div class="gallery">
-    <img src="plaque.jpg" alt="AOT Plaque" width="600" height="400">
-  </a>
-  <div class="desc"> AOT Graduation </div>
-</div>
-   
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+
+
+
+<!-- Junior Year -->
+    <h1 class="title2">---</h1>
+    <h1 id="t2">Junior Year</h1>
+
+    <div class="row">
+      <div class="column">
+        <div class="content">
+          <a href="https://docs.google.com/presentation/d/145vAbcdX64u_N8lrLd_By-0ZM6CX7jSm9AWslIKsv6c/edit?usp=sharing" target="_blank">
+          <img src="infy.png" alt="Google Infy App Challenge" style="width:100%">
+          </a>
+          <h3>Google Infy App</h3>
+          <p>This slideshow was selected to be a finalist for the Google Infy App Challenge. My team and I created an app designated to help teenagers such as ourselves obtain community service hours and become engaged within the community. We designed this app to hit two birds with one stone by providing efficiency for high school students and simultaneously helping the environment.</p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="https://mypythonportfolioontheweb-srimonanida.pppython22-23.repl.co/earsketch.html" target="_blank">
+          <img src="ear.png" alt="Ear Sketch Project" style="width:100%"> </a>
+          <h3>Earsketch Project</h3>
+          <p>Using Python, I created two ringtones for different occasions. Depending on the person and what ringtone they select from the options, music should play based on genre. With the Python language, the ringtone’s tempo, speed, and beats are manipulated.  </p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="https://www.figma.com/proto/gKNcW2EtXaZYQIngsJkmr9/Personal-Figma?node-id=1-2&starting-point-node-id=1%3A2&mode=design&t=QTNE1J1alzqVGLh1-1" target="_blank">
+          <img src="caring.png" alt="App Wireframe" style="width:100%"> </a>
+          <h3>A Caring Community</h3>
+          <p>The mock app is designed to be very simplistic and easily accessible for all students connecting back to the INFY App Challenge presentation. The primary functions are, a map to look up specific locations to volunteer, a volunteer job listing page, and a settings page for preference-based customization, and our home page which provides a lot of basic information for new users.
+</p>
+        </div>
+      </div>
+      <div class="column">
+        <div class="content">
+          <a href="https://docs.google.com/document/d/1e61YSpBuwusCDDAeX6_-gzgmnPF6tfYbYKHbvaKTSS8/edit?usp=sharing" target="_blank">
+          <img src="https://i.pinimg.com/564x/21/69/f5/2169f59a398ca97e9454477e5a0b5c81.jpg" alt="Resume" style="width:100%"> </a>
+          <h3>My Resume</h3>
+          <p>Check out what I've been doing in and out of school!</p>
+        </div>
+      </div>
+    </div>
+
+<div class="footer">
+  <p>srimonanida@gmail.com</p>
+  <p><a href="https://www.linkedin.com/in/srimon-anida-3b209b221/">linkedin</a></p>
+</div>  
 </body>
 
 </html>
