--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
      <article>
        <h1>Welcome to My Portfolio!</h1>
-       <p>Hello! My name is Srimon Anida and I am currently a senior at Thomas A. Edison CTE High School. My CTE track is Web & App Development. For the past three school years, I have been learning and understanding multiple coding languages such as HTML, CSS, JavaScript, and Python. Outside of school, I joined a program called America On Tech. where I was selected to participate in a year-long web development and digital marketing fellowship program. I participated in weekly technology classes taught by software engineers at leading technology companies alongside my regularly scheduled classes in school and even competed in competitions such as the Google Infy App Challenge. What I like most about this field is its challenge. Everything is precise and organized. One misplaced semicolon or color scheme affects every little thing.  </p>
+       <p>Hello! My name is Srimon Anida and I am currently a senior at <a href="https://www.taehs.org/">Thomas A. Edison CTE High School</a>. My CTE track is Web & App Development. For the past three school years, I have been learning and understanding multiple coding languages such as HTML, CSS, JavaScript, and Python. Outside of school, I joined a program called <a href="https://www.americaontech.org/tech-flex-leaders.html">America On Tech</a>, where I was selected to participate in a year-long web development and digital marketing fellowship program. I participated in weekly technology classes taught by software engineers at leading technology companies alongside my regularly scheduled classes in school and even competed in competitions such as the <a href="https://pencil.org/blog/pencils-app-creation-competitions/">Google Infy App Challenge</a>. What I like most about this field is its challenge. Everything is precise and organized. One misplaced semicolon or color scheme affects every little thing.  </p>
        <br>
-       <p>Below are my projects over the years. Please keep in mind that my senior year profile is still in progress and that unfortunately due to technical issues, my junior year portfolio is having trouble connecting. I attached projects to substitute.</p>
+       <p>Below are my projects over the years. Please keep in mind that my senior year portfolio is still in progress and that unfortunately due to technical issues, my junior year portfolio is having trouble connecting. I attached projects to substitute.</p>
      </article>
    </section>
    
@@ -50,7 +50,7 @@
    <div class="row">
      <div class="column">
        <div class="content">
-         <a href="https://hire-me-profile-srimonanida1.seniorspds-34-fall-2023.repl.co/" target="_blank">
+         <a href="https://srimonloll.github.io/senioryear24.github.io/" target="_blank">
          <img src="hireme.png" alt="Hire Me Profile" style="width:100%">
          </a>
          <h3>Hire Me Project</h3>
@@ -59,7 +59,7 @@
      </div>
      <div class="column">
        <div class="content">
-         <a href="https://e850dc44-35e5-46c0-8923-1a6d64ee6033-00-ke5qqjdzu83w.worf.replit.dev/" target="_blank">
+         <a href="https://srimonloll.github.io/srimon_portfolio/" target="_blank">
          <img src="hs.png" alt="Harry Styles' Pinterest" style="width:100%"> </a>
          <h3>Harry Styles' Pinterest Project</h3>
          <p>I chose to remake a social media page on Harry Styles. This project focused on properties of the box model, divs, flexboxes, and multiple class attributes, as well as pair programming techniques. I knew pictures would showcase his life and vibe well which is why I chose to remake Pinterest.</p>
@@ -83,7 +83,7 @@
      </div>
      <div class="column">
         <div class="content">
-          <a href="https://7b9c6d19-e15c-4f4d-b651-d5ae56d87dd2-00-fd688wqyaqd7.teams.replit.dev/" target="_blank">
+          <a href="https://srimonloll.github.io/cQuiz/" target="_blank">
           <img src="style.png" alt="Character Quiz" style="width:100%"> </a>
           <h3>Character Quiz</h3>
           <p>In inspiration from the iconic Buzzfeed quizzes, I designed a quiz deciding which style a person gives off based on certain questions. In this project I focused on using if else statements in Javascript and conditional statements.</p>
