--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
          <p>With the use of HTML & CSS, I was tasked with recreating and incorporating my ideas for my high school's webpage. I focused on the use of images and making my school seem more comfortable for incoming and current students.  </p>
        </div>
      </div>
+
+
+     <div class="column">
+        <div class="content">
+          <a href="" target="_blank">
+          <img src="cert.png" alt="CERTIFICATION ASSIGNMENTS" style="width:100%"> </a>
+          <h3>Domain Assignments</h3>
+          <p>Projects focusing on the HTML & CSS certification  </p>
+        </div>
+      </div>
      
    </div>
    
