--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <a href="domain.html" target="_blank">
           <img src="cert.png" alt="CERTIFICATION ASSIGNMENTS" style="width:100%"> </a>
           <h3>All Domain Assignments</h3>
-          <p>Projects focusing on the HTML & CSS certification  </p>
+          <p>Projects focusing on the HTML & CSS certification.  </p>
         </div>
       </div>
      
