--- a/domain1.html
+++ b/domain1.html
@@ -21,10 +21,9 @@
 
   <h2>Domain 1 - HTML Functions</h2>
   <a href="Domain1/MusicStore1/11a-scripts.html">HTML Fundamentals Pg.10 </a>
-
+<a href="https://github.com/srimonloll/NEWUPDATEDLINKS"> back </a>
 
   <h2>Domain 2 - CSS Fundamentals </h2>
-  <a href="Domain2/MusicStore2/21a-index.html">Creating Style Sheets Exercise - Pg. 13 </a>
 </body>
 
 </html>
