--- a/Domain2/MusicStore2/21a-index.html
+++ b/Domain2/MusicStore2/21a-index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title>THE Music Store</title>
+  <style>
+  body{font-family:  "Segoe UI", Tahoma, and sans-
+    serif;}
+  </style>
 </head>
 <body>
     Welcome to &lt;&lt;THE Music Store&gt;&gt;
