--- a/Domain2/MusicStore2/21b-books.html
+++ b/Domain2/MusicStore2/21b-books.html
@@ -1,9 +1,12 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title>THE Music Store</title>
     <link rel="stylesheet" type="text/css" href="21b-main.css" />
+  <style>
+    p{color:maroon;}
+  </style>
 </head>
 <body>
 <h2>Books and More</h2>
@@ -16,7 +19,7 @@
     
     <details>
         <summary>Show or hide these books</summary>
-        <p>
+        <p style="color:fuchsia;">
             Look at all of these great books!
             <img src="Images/musicbooks.jpg" alt="music books" width="920" height="690" />
         </p>
