--- a/domain.html
+++ b/domain.html
@@ -24,7 +24,7 @@
 
 
   <h2>Domain 2 - CSS Fundamentals </h2>
-  <a href="Domain2/MusicStore2/21a-index.html">Creating Style Sheets Exercise - Pg. 13 </a>
+  <a href="Domain2/MusicStore2/21b-books.html">Style Sheet Precedence - Pg. 14 </a>
 </body>
 
 </html>
