--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
      <div class="column">
         <div class="content">
-          <a href="domain.html" target="_blank">
+          <a href="https://srimonloll.github.io/domains/" target="_blank">
           <img src="cert.png" alt="CERTIFICATION ASSIGNMENTS" style="width:100%"> </a>
           <h3>All Domain Assignments</h3>
           <p>Projects focusing on the HTML & CSS certification.  </p>
